--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://telegram-storefront-statics-998qj3fgi-touragent-club.vercel.app/storefront.css"
+    />
   </head>
   <body>
     <h1>Index.html</h1>
